kubernetes/apps/flux-system/capacitor-next/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capacitor-next
  namespace: flux-system
spec:
  hostnames: ["capacitor-next.k8s.alexieff.io"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: capacitor-next
          port: 80
